Fix: align content to center and resonsive functionality

--- a/styles.css
+++ b/styles.css
@@ -77,5 +77,9 @@
 }
 
 #region-main{
-    width: 100%; 
+    min-width: 100%; 
+}
+
+.coursefrontpage__main{
+    margin: 0 auto !important;
 }
